[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langgraph>=0.3.18",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.1",
]
